reader header spacing fix

--- a/source/assets/stylesheets/components/_headers.sass
+++ b/source/assets/stylesheets/components/_headers.sass
@@ -243,7 +243,7 @@
 .header__headline.header--reading__headline
   +span_columns(8)
   +shift(2)
-  padding-top: 50px
+  padding-top: 30px
 
 
 @media only screen and (max-width: $medium-screen-max) 
